--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,141 @@
+/* Reset */
+html {
+  height: 100%;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
-  background-color: bisque;
+  background: #f6f6f6;
+  display: grid;
+  place-content: center;
+  min-height: 100%;
+  font-family: "Lato", sans-serif;
+}
+
+ul {
+  list-style-type: none;
+}
+
+/* Utilities */
+.flex {
+  display: flex;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.grow-1 {
+  flex-grow: 0;
+}
+
+.grow-2 {
+  flex-grow: 1;
+}
+
+.border {
+  border-bottom: 1px solid #f6f6f6;
+}
+
+.border-none {
+  border: none;
+}
+
+.p {
+  padding: 1em;
+}
+
+.pe {
+  padding-right: 1em;
+}
+
+.px {
+  padding-inline: 1em;
+}
+
+.ms {
+  margin-left: 0.25em;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.hide {
+  display: none;
+}
+
+.pos-r {
+  position: relative;
+}
+
+.pos-a {
+  position: absolute;
+}
+
+/* Main Styling */
+.todo-app {
+  width: 600px;
+  max-width: 60%;
+  margin-inline: auto;
+  background: #fff;
+  box-shadow: 10px 15px 16px -10px rgba(185, 185, 185, 0.5);
+}
+
+.checked {
+  text-decoration: line-through;
+  color: #b9b9b9;
+}
+
+.bg {
+  background: #fffeca;
+}
+
+.task-description {
+  background: none;
+  border: none;
+}
+
+/* Buttons */
+.btn {
+  font-size: 1.5rem;
+  font-weight: 500;
+  background: none;
+  border: none;
+  padding-inline: 5px;
+}
+
+.clear {
+  font-size: 1rem;
+  font-weight: normal;
+  width: 100%;
+  border: none;
+  background: #f6f6f6;
+}
+
+/* Interactions */
+.btn:hover {
+  cursor: pointer;
+}
+
+.clear:hover {
+  text-decoration: underline;
+}
+
+.border-none:active,
+.border-none:focus {
+  outline: none;
+}
+
+.task-description:focus {
+  outline: none;
 }
